<resources>
    <string name="app_name">Matematika</string>
    <string name="action_settings">Settings</string>
    <string name="zaidimas">Zaidimas</string>
    <string name="check">Check</string>
    <string name="textview">TextView</string>
    <string name="random">Random</string>
    <string name="atgal_grizti">Atgal grizti</string>
    <string name="iveskite_atsakyma">Iveskite atsakyma</string>
    <string name="play">Play</string>
    <string name="bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook_bookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbookbook">BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook BookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBookBook</string>
    <string name="back">Back</string>
    <string name="welome">Welome</string>
    <string name="this_is_the_loading_screen">This is the loading screen</string>
    <string name="broliai">Broliai</string>
    <string name="paint">Paint</string>
    <string name="mazesnis_brolis">Mazesnis brolis</string>
    <string name="didesnis_brolis">Didesnis brolis</string>
</resources>
