<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/background_dark">



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/landscape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:alpha="0.9">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welome"
                        android:textColor="#ffffff"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="10dp"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="235dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:drawableTop="@drawable/calculator"
                            android:background="@android:color/transparent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />

                        <Space
                            android:layout_width="90dp"
                            android:layout_height="140dp"/>

                        <Button
                            android:id="@+id/book"
                            android:layout_width="150dp"
                            android:layout_height="80dp"
                            android:drawableTop="@drawable/book"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/button_test_ned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/didesnis_brolis"
                        app:layout_constraintBottom_toTopOf="@+id/button2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_test_rok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mazesnis_brolis"
                        app:layout_constraintBottom_toTopOf="@+id/book"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/button_paint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/paint"
                            app:layout_constraintBottom_toTopOf="@+id/button_ned"
                            app:layout_constraintEnd_toStartOf="@+id/book"
                            app:layout_constraintStart_toEndOf="@+id/button2"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/button_ned"
                            android:layout_width="match_parent"
                            android:layout_height="118dp"
                            android:text="@string/broliai"
                            android:textSize="80sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>